define ffmpeg library as shared

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ pkg_check_modules(AVFORMAT REQUIRED libavformat)
 pkg_check_modules(AVUTIL REQUIRED libavutil)
 pkg_check_modules(SWSCALE REQUIRED libswscale)
 
-add_library(ffmpeg src/Codec.h src/Codec.cpp src/Packet.cpp src/Packet.h src/av.h src/Frame.cpp src/Frame.h src/Parser.h src/Format.h src/SwsContext.h src/Format.cpp src/av.cpp)
+add_library(ffmpeg SHARED src/Codec.h src/Codec.cpp src/Packet.cpp src/Packet.h src/av.h src/Frame.cpp src/Frame.h src/Parser.h src/Format.h src/SwsContext.h src/Format.cpp src/av.cpp)
 target_include_directories(ffmpeg PRIVATE ${AVUTIL_INCLUDE_DIRS} ${AVCODEC_INCLUDE_DIRS} ${AVFORMAT_INCLUDE_DIRS} ${SWSCALE_INCLUDE_DIRS})
 target_include_directories(ffmpeg PUBLIC include)
 target_link_libraries(ffmpeg ${AVUTIL_LIBRARIES} ${AVCODEC_LIBRARIES} ${AVFORMAT_LIBRARIES} ${SWSCALE_LIBRARIES})
